--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,34 @@
 # ===============================
 # DATABASE CONNECTION - USE HSQLDB
 # ===============================
-spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
-spring.datasource.url=jdbc:hsqldb:mem:testdb;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=
+# spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
+# spring.datasource.url=jdbc:hsqldb:mem:testdb;DB_CLOSE_DELAY=-1
+# spring.datasource.username=sa
+# spring.datasource.password=
 # ===============================
 # JPA / HIBERNATE
 # ===============================
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.data=classpath:db/InitDB_HSQLDB.sql, classpath:db/Populate_DB.sql
+# spring.jpa.hibernate.ddl-auto=create
+# spring.datasource.data=classpath:db/InitDB_HSQLDB.sql, classpath:db/Populate_DB.sql
+# spring.jpa.show-sql=true
+
+# ===============================
+# DATABASE CONNECTION - USE PostgreSQL
+# ===============================
+spring.datasource.initialization-mode=always
+spring.datasource.platform=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/Products
+spring.datasource.username=postgres
+spring.datasource.password=password
+# ===============================
+# JPA / HIBERNATE
+# ===============================
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# ===============================
+# DATABASE CONNECTION - USE PostgreSQL
+# ===============================
